fix: higher z-index for non-compact bce-input labels
This fixes an issue that occurs when a compact bce-input is put into a bce-input container. The
child label was rendered above tooltips of the parent label.

--- a/packages/core/src/components/bce-input/bce-input.scss
+++ b/packages/core/src/components/bce-input/bce-input.scss
@@ -77,6 +77,7 @@ bce-input {
       > label {
         margin: 10px 0;
         width: 25%;
+        z-index: 2;
 
         &[data-hover] {
           margin: 10px 0;
